[package]
name = "dit"
version = "0.1.0"
edition = "2021"
authors = ["Bentlybro <github@bentlybro.com>"]
description = "Docker Image Tracker - Track Docker image sizes over time"
license = "MIT"
repository = "https://github.com/Bentlybro/docker-image-tracker"

[[bin]]
name = "dit"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive"] }

# Docker API client
bollard = "0.18"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Terminal tables
tabled = "0.16"

# Async runtime (required by bollard)
tokio = { version = "1.43", features = ["full"] }

# Terminal colors
colored = "2.1"

# Error handling
anyhow = "1.0"

# Human-readable sizes
bytesize = "1.3"

# YAML parsing for docker-compose
serde_yaml = "0.9"

# HTTP client for GitHub API
reqwest = { version = "0.11", features = ["json"] }
